--- a/styles/balance.css
+++ b/styles/balance.css
@@ -2,5 +2,5 @@ body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    background: url('../img/game-background1.jpg');
+    background: url('../img/game-background.jpg');
 }
